k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qod
  labels:
    # Enable Istio sidecar injection for this namespace if using Istio
    istio-injection: enabled
