k8s/04-qod-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qod-api-deployment
  namespace: qod
spec:
  replicas: 3
  selector: { matchLabels: { app: qod-api } }
  template:
    metadata:
      labels: { app: qod-api }
    spec:
      # No imagePullSecrets needed anymore
      containers:
        - name: qod-api
          # The MAIN container still uses your application image
          image: ghcr.io/mshamsq89/qod-api:8dff927
          imagePullPolicy: Always
          ports:
            - { name: http, containerPort: 8080 }
          env: # <-- Add this env section
            - name: SPRING_PROFILES_ACTIVE
              value: "api" # This pod will NOT load the Kafka listener
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: http }
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: http }
