k8s/01-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: qod
spec:
  serviceName: "redis"
  replicas: 1
  selector: { matchLabels: { app: redis } }
  template:
    metadata: { labels: { app: redis } }
    spec:
      containers:
      - name: redis
        image: redis:7.0-alpine
        ports:
        - containerPort: 6379
          name: client
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: qod
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector: { app: redis }
