k8s/05-qod-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qod-api-service
  namespace: qod
spec:
  selector: { app: qod-api }
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
